--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,6 +1,10 @@
+conta.notFound=Conta não encontrada.
+conta.saldoInsuficiente=A conta não tem saldo insuficiente para a Transação.
 conta.numeroConta.notNull=O número da conta é um campo obrigatório.
 conta.numeroConta.positive=O número da conta deve conter um valor numérico maior que zero.
 conta.saldo.notNull=O valor do saldo é um campo obrigatório.
 conta.saldo.positiveOrZero=O valor do saldo deve conter um valor numérico maior ou igual a zero.
 transacao.formaPagamento.notNull=A forma de pagamento é um campo obrigatório.
 formaPagamento.notFound=Forma de pagamento inválida.
+transacao.valor.notNull=O valor da transação é um campo obrigatório.
+transacao.valor.positive=O valor da transação deve conter um valor numérico maior que zero.
